--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "vue-zk-ui",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:wc": "vue-cli-service build --target wc-async --dest lib --name zk ./src/packages/*.vue",
+    "serve": "vue-cli-service serve --mode production --port 8100",
+    "build": "vue-cli-service build --mode production",
+    "build:packages": "vue-cli-service build --mode packages",
+    "publish:packages": "npm publish",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
