--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-zk-ui",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "serve": "vue-cli-service serve --mode production --port 8100",
     "build": "vue-cli-service build --mode production",
