--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "vue-zk-ui",
   "version": "0.1.0",
-  "private": true,
   "main": "lib/index.js",
   "scripts": {
     "serve": "vue-cli-service serve --mode production --port 8100",
     "build": "vue-cli-service build --mode production",
     "build:packages": "vue-cli-service build --mode packages",
-    "publish:packages": "npm publish",
+    "publish": "npm publish",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
