--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue-zk-ui",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "lib/index.js",
   "scripts": {
-    "serve": "vue-cli-service serve --mode production --port 8100",
+    "serve": "vue-cli-service serve --port 8100",
     "build": "npm run build:docs && npm run build:packages",
     "build:docs": "vue-cli-service build --mode production",
     "build:packages": "vue-cli-service build --mode packages",
