--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vue-zk-ui",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "main": "lib/index.js",
   "scripts": {
     "serve": "vue-cli-service serve --port 8100",
     "build": "npm run build:docs && npm run build:packages",
     "build:docs": "vue-cli-service build --mode production",
     "build:packages": "vue-cli-service build --mode packages",
+    "pub": "npm run build && npm publish",
     "lint": "vue-cli-service lint"
   },
   "repository": {
